add some styles; enable click handler on map; add geojson to constants

--- a/dev/custom.css
+++ b/dev/custom.css
@@ -3542,3 +3542,6 @@ span[class*=sprite-24], i[class*=sprite-24], img[class*=sprite-24] {
     height: 32px;
     width: 32px; }
 
+.indicator-explorer-app {
+  font-size: 14px;
+}
