--- a/src/styles/spinner.css
+++ b/src/styles/spinner.css
@@ -2,8 +2,13 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
   width: 100%;
   min-height: 320px;
   color: #1f77b4;
   font-size: 24px;
+}
+
+.spinner p {
+  margin-bottom: 1em;
 }
