--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -54,6 +54,10 @@
   margin-bottom: 0;
 }
 
+.footnote .dataSources p {
+  margin-bottom: 0;
+}
+
 .chartFootnote {
   composes: footnote;
   margin: 1em 0 0;
