NO TICKET: fix pie chart

--- a/src/styles/filter.css
+++ b/src/styles/filter.css
@@ -8,8 +8,8 @@
   display: block;
   box-sizing: border-box;
   width: 100%;
-  height: 2em;
-  padding: 0.6em 1em;
+  height: 2.5em;
+  padding: 0 0 0 0.5em;
   border: 1px solid #ccc;
   color: #333;
   background: #fff;
