CS-9314: remove side and top border around charts CS-9315: add padding to trend charts

--- a/src/styles/BaseLayout.css
+++ b/src/styles/BaseLayout.css
@@ -31,8 +31,8 @@
 .chartContainer {
   margin-bottom: 1em;
   padding: 1em;
-  border: 1px solid #ccc;
-  border-radius: 5px;
+  border-bottom: 1px solid #ccc;
+  /*border-radius: 5px;*/
 }
 
 .chartTitle {
