--- a/src/styles/map.css
+++ b/src/styles/map.css
@@ -1,6 +1,9 @@
 .mapFilter {
   composes: mainFilter from './BaseLayout.css';
-  padding: 1em;
+  margin: 0;
+  padding: 0.5em 0;
+  border: 0;
+  background: transparent;
 }
 
 .chartTitle {
