--- a/src/styles/BaseLayout.css
+++ b/src/styles/BaseLayout.css
@@ -68,3 +68,13 @@
   composes: footnote;
   margin: 1em 0 0;
 }
+
+.breakFill > line {
+    stroke-width: 4px;
+    stroke: white;
+    stroke-opacity: 1;
+}
+.break > line {
+    stroke-width: 1px;
+    stroke: grey;
+}
