--- a/src/styles/map.css
+++ b/src/styles/map.css
@@ -1,6 +1,6 @@
 .mapFilter {
   composes: mainFilter from './BaseLayout.css';
-  margin: 0;
+  margin: -2em 0 0 0;
   padding: 0.5em 0;
   border: 0;
   background: transparent;
